[MINOR] Fixed alignment issue on showing the product price on next line

--- a/quadcart-web/src/main/webapp/statics/css/quadcart.css
+++ b/quadcart-web/src/main/webapp/statics/css/quadcart.css
@@ -279,7 +279,6 @@ div.product-details dt {
 div.product-details dd {
 	margin: 0 0 2px;
 	padding: 0 2px;
-	float: left;
 	font-size: 0.9em;
 }
 
